--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- Hearts will be generated here by JavaScript -->
     </div>
     <div class="image-container">
-        <img src="/media/couple-1.jpg" alt="Your Image" class="valentine-image">
+        <img src="couple-1.jpg" alt="Your Image" class="valentine-image">
     </div>
     <div class="message-container">
         <p>Happy Valentine's Day, my love!</p>
@@ -35,7 +35,7 @@
         <p>Love, your Eon, Dusty, Yoyi, Bab, hubba, your pretty boy :></p>
     </div>
     <div class="image-container">
-        <img src="/media/couple-6.jpg" alt="Your Image" class="valentine-image">
+        <img src="couple-6.jpg" alt="Your Image" class="valentine-image">
     </div>
     <script src="script.js"></script>
 </body>
